Добавлена возможность получения полей перехода и их параметров

--- a/RTMobile/RTMobile/issues/viewIssue/Transition.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/Transition.xaml
@@ -4,8 +4,26 @@
              x:Class="RTMobile.issues.viewIssue.Transition"
              Title="ПЕРЕХОД">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Переписать title"/>
-        </StackLayout>
+        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                     BackgroundColor="#312F35">
+            <StackLayout x:Name="generalStackLayout" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                     BackgroundColor="#312F35" Padding="27">
+            </StackLayout>
+            <Grid VerticalOptions="End" BackgroundColor="#323037">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="5"/>
+                </Grid.RowDefinitions>
+                <ImageButton Source="home.png" Grid.Column="0" Grid.Row="1"
+                             BackgroundColor="Transparent" Clicked="ImageButton_Clicked_3"></ImageButton>
+                <ImageButton Source="calendar.png" Grid.Column="1" Grid.Row="1"
+                             BackgroundColor="Transparent" Clicked="ImageButton_Clicked"></ImageButton>
+                <ImageButton Source="insight.png" Grid.Column="2" Grid.Row="1"
+                             BackgroundColor="Transparent" Clicked="ImageButton_Clicked_1"></ImageButton>
+                <ImageButton Source="filter.png" Grid.Column="3" Grid.Row="1"
+                             BackgroundColor="Transparent" Clicked="ImageButton_Clicked_2"></ImageButton>
+            </Grid>
+        </StackLayout>        
     </ContentPage.Content>
 </ContentPage>
