--- a/RTMobile/RTMobile/issues/AllIssuesView.xaml
+++ b/RTMobile/RTMobile/issues/AllIssuesView.xaml
@@ -42,7 +42,7 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="140"/>
                                     </Grid.RowDefinitions>
-                                   
+
                                     <Frame BackgroundColor="#94B66C" HasShadow="True" Padding="0"
                                            Grid.Column="0" Grid.Row="0" CornerRadius="5" Margin="0,0,-4,0">
                                         <StackLayout Orientation="Horizontal">
@@ -124,16 +124,17 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Label x:Name="noneIssue" Text="Задачи отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+            <StackLayout x:Name="noneIssue" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <Label Text="Задачи отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
                    TextColor="#F0F1F0" FontSize="16" IsVisible="False"/>
-
+            </StackLayout>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="5"/>
                     <RowDefinition Height="20"/>
                     <RowDefinition Height="5"/>
                 </Grid.RowDefinitions>
-               <ImageButton Source="home.png" Grid.Column="0" Grid.Row="1"
+                <ImageButton Source="home.png" Grid.Column="0" Grid.Row="1"
                              BackgroundColor="Transparent" Clicked="ImageButton_Clicked_3"></ImageButton>
                 <ImageButton Source="calendar.png" Grid.Column="1" Grid.Row="1"
                              BackgroundColor="Transparent" Clicked="ImageButton_Clicked"></ImageButton>
