--- a/RTMobile/RTMobile/issues/viewIssue/People.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/People.xaml
@@ -66,7 +66,7 @@
                                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                                     </Label.GestureRecognizers>
                                 </Label>
-                                <Label Text="Исолнитель:" Grid.Column="0" Grid.Row="1" VerticalOptions="Center" FontSize="13"/>
+                                <Label Text="Исполнитель:" Grid.Column="0" Grid.Row="1" VerticalOptions="Center" FontSize="13"/>
                                 
 
                                 <Frame Margin="20, 10, 0, 10" 
