--- a/RTMobile/RTMobile/issues/viewIssue/Attachments.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/Attachments.xaml
@@ -19,34 +19,76 @@
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
-                      BackgroundColor="#312F35">
-            <StackLayout VerticalOptions="FillAndExpand">
-                <CarouselView ItemsSource="{Binding attachments}">
-                    <CarouselView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Red">
-                            <Label Text="123"/>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CarouselView.ItemTemplate>
-                </CarouselView>
-                <!--<CarouselView>
-                    <CarouselView.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>Baboon</x:String>
-                            <x:String>Capuchin Monkey</x:String>
-                            <x:String>Blue Monkey</x:String>
-                            <x:String>Squirrel Monkey</x:String>
-                            <x:String>Golden Lion Tamarin</x:String>
-                            <x:String>Howler Monkey</x:String>
-                            <x:String>Japanese Macaque</x:String>
-                        </x:Array>
-                    </CarouselView.ItemsSource>
-                </CarouselView>-->
-                <Label Text="РАЗДЕЛ В РАЗРАБОТКЕ..." HorizontalOptions="CenterAndExpand"
-                       VerticalOptions="CenterAndExpand" TextColor="#F0F1F0" FontSize="20"/>
-            </StackLayout>
-            <Grid VerticalOptions="End">
+                      BackgroundColor="#4A4C50">
+            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="190"/>
+                    <RowDefinition Height="190"/>
+                    <RowDefinition Height="190"/>
+                </Grid.RowDefinitions>
+                <Frame Grid.Row="0" Grid.Column="0" HasShadow="True" CornerRadius="5"
+                   BackgroundColor="#FFFFFF" Margin="10,10,10,10" Padding="0,0,0,0">
+                    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="10,0,10,20" Margin="0" >
+                        <StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" HeightRequest="20" Orientation="Horizontal">
+                            <Image Source="image.png" Grid.Column="0" Grid.Row="0"/>
+                            <Label Text="Изображения" Grid.Column="1" Grid.Row="0"/>
+                        </StackLayout>
+                        <BoxView HorizontalOptions="FillAndExpand" VerticalOptions="Center"
+                                                     CornerRadius="50" Margin="-5,0,0,10" BackgroundColor="#4A4C50"
+                                                     HeightRequest="1"/>
+                        <CarouselView x:Name="carouselImages" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <CarouselView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout>
+                                        <Image Source="{Binding thumbnailImage}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CarouselView.ItemTemplate>
+                        </CarouselView>
+                        <StackLayout x:Name="noneImage" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <Label Text="Изображения отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False" />
+                        </StackLayout>
+                    </StackLayout>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="0" HasShadow="True" CornerRadius="5"
+                   BackgroundColor="#FFFFFF"  Margin="10,0,10,10" Padding="10,0,10,0">
+                    <StackLayout>
+                        <CarouselView x:Name="carouselDocuments">
+                            <CarouselView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout>
+                                        <Label Text="{Binding filename}" FontSize="16"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CarouselView.ItemTemplate>
+                        </CarouselView>
+                        <StackLayout x:Name="noneDocuments" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <Label Text="Документы отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False"  />
+                        </StackLayout>
+                    </StackLayout>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="0" HasShadow="True" CornerRadius="5"
+                  BackgroundColor="#FFFFFF" Margin="10,0,10,10" Padding="10,0,10,0">
+                    <StackLayout>
+                        <CarouselView x:Name="carouselOthers">
+                            <CarouselView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout>
+                                        <Label Text="{Binding filename}" FontSize="16"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </CarouselView.ItemTemplate>
+                        </CarouselView>
+                        <StackLayout x:Name="noneOthers" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <Label Text="Файлы отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
+                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False"  />
+                        </StackLayout>
+                    </StackLayout>
+                </Frame>
+            </Grid>
+            <Grid VerticalOptions="End" BackgroundColor="#312F35">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="5"/>
                     <RowDefinition Height="20"/>
