--- a/RTMobile/RTMobile/issues/viewIssue/imageView.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/imageView.xaml
@@ -4,13 +4,14 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="RTMobile.issues.viewIssue.imageView">
-    <ContentPage >
+             x:Class="RTMobile.issues.viewIssue.imageView" ItemsSource="{Binding attachmentsImage}">
+    <ContentPage>
         <ContentPage.Content>
-            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Black">
-                <Image Source="{Binding thumbnailImage}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
-                
-            </Grid>
+            <StackLayout  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                    <Image Source="{Binding contentImage}"/>
+                </StackLayout>
+            </StackLayout>
         </ContentPage.Content>
     </ContentPage>
 </CarouselPage>
